   anything below an intermediate variable that has a name. Defaults to False.
   (Frederic B.)
 * debugprint does not print anymore the "|" symbol in a column after the last input. (Frederic B.)
 * If you use Enthought Python Distribution (EPD) now we use its blas
   implementation by default (tested on Linux and Windows)
   (Frederic B., Simon McGregor)

Sparse Sandbox graduate
 * Remove0 op: it removes stored elements with value 0. (Frederic B.)

Sparse Sandbox Additions (not reviewed/documented/tested, but used by some people)
 * They are all in the theano.sparse.sandbox.sp2 module
 * Op class: Cast, Poisson, Multinomial, EliminateZeros, Sum, Binomial
 * Op class: SamplingDot, SamplingDotCsr (inserted automatically)
 * Op function: structured_sigmoid, structured_exp, structured_pow, structured_minimum
 * Op class: StructuredAddSV, StrucutedAddSVCSR (inserted automatically)
 * opt: local_sampling_dot_csr, local_structured_add_s_v

Internal changes
 * Define new exceptions MissingInputError and UnusedInputError, and use them
   in theano.function, instead of TypeError and ValueError. (Pascal L.)
 * Better handling of bitwidth and max values of integers and pointers
   across platforms (Pascal L.)

Crash Fix
 * Do not try to use the BLAS library when blas.ldflags is manually set to an
   empty string (Frederic B.)
 * When importing theano on a computer without GPU with the Theano
   flags 'device' or 'init_gpu_device' set to gpu* (Frederic B., reported by  Luo Heng)
 * Optimization printed a useless error when scipy was not available. (Frederic B.)
 * GPU conv crash/slowdown on newer hardware (James B.)
 * Better error handling in GPU conv (Frederic B.)
 * GPU optimization that moves element-wise Ops to the GPU. Crash happened in
   a particular execution order of this optimization and the
   element-wise fusion optimization when upcasting some inputs to
   float32 (to compute them on the GPU).
   (Frederic B., reported by Sander Dieleman)